# old-school-renderer

./: .gitignore  CMakeLists.txt  README.MD  STC_Gl.cpp  STC_Gl.h  main.cpp  model.cpp  model.h  test.cpp
